src/objects/Promo_Code__c.object
<CustomObject>
    <description>Promotional Codes for bookings.</description>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Promo Codes</relationshipLabel>
        <relationshipName>Promo_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Promo Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hotel__c</columns>
        <columns>Code__c</columns>
        <columns>Discount__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Promo Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>